--- a/MiBodeguita.BL/MiBodeguita.BL.csproj
+++ b/MiBodeguita.BL/MiBodeguita.BL.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompraBL.cs" />
+    <Compile Include="ICompVenta.cs" />
     <Compile Include="IProductoBL.cs" />
     <Compile Include="ProductoBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
