--- a/MiBodeguita.Model/MiBodeguita.Model.csproj
+++ b/MiBodeguita.Model/MiBodeguita.Model.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompVentaModel.cs" />
     <Compile Include="ProductoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RespuestaModel.cs" />
