--- a/MiBodeguita.BL/MiBodeguita.BL.csproj
+++ b/MiBodeguita.BL/MiBodeguita.BL.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompraBL.cs" />
+    <Compile Include="DetalleBL.cs" />
     <Compile Include="ICompVenta.cs" />
     <Compile Include="IProductoBL.cs" />
     <Compile Include="ProductoBL.cs" />
