--- a/MiBodeguita.Model/MiBodeguita.Model.csproj
+++ b/MiBodeguita.Model/MiBodeguita.Model.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompVentaModel.cs" />
+    <Compile Include="DetalleModel.cs" />
     <Compile Include="ProductoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RespuestaModel.cs" />
